--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             "Python_Essentials_1_Badge20230730-28-kwpti5.pdf",
             "Python_Essentials_2_Badge20230731-28-ghjx4s.pdf",
             "JavaScript_Essentials_1_Badge20230807-28-41bn52.pdf",
-            "Miguel AlejandroCervantes Zea-CCNA RS ESSENTIA-certificate (1).pdf",
-            "Miguel AlejandroCervantes Zea-CCNA RS ESSENTIA-certificate.pdf",
-            "Miguel AlejandroCervantes Zea-P60 - FUNDAMENTO-certificate (1).pdf"
+            "Miguel AlejandroCervantes Zea-CCNA RS ESSENTIA-certificate.pdf"
         ];
 
         // Función para mostrar los certificados
