--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi Curriculum</title>
+    <title>Curriculum de Miguel Alejandro Cervantes Zea</title>
 </head>
 <body>
-    <h1>Mi Curriculum</h1>
-    <div id="curriculum"></div>
+    <h1>Curriculum de Miguel Alejandro Cervantes Zea</h1>
+    <div id="Curriculum de Miguel Alejandro Cervantes Zea"></div>
     <script "typer=text/Javascript" src="script.js"></script>
 </body>
 </html>
