--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
     <h1>Curriculum de Miguel Alejandro Cervantes Zea</h1>
     <div id="Curriculum de Miguel Alejandro Cervantes Zea"></div>
-    <script "typer=text/Javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
