--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Curriculum de Miguel Alejandro Cervantes Zea</h1>
     <div id="Curriculum de Miguel Alejandro Cervantes Zea"></div>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </body>
 </html>
